--- a/models/usergroup/columns.yaml
+++ b/models/usergroup/columns.yaml
@@ -8,17 +8,17 @@ columns:
         searchable: yes
     name:
         label: Name
-        searchable: yes             
+        searchable: yes
     owner_name:
         label: Owner Name
         relation: owner
-        select: @name
+        select: '@name'
         searchable: yes
     owner_id:
         label: Owner ID
         relation: owner
-        select: @id
-        searchable: yes   
+        select: '@id'
+        searchable: yes
     code:
         label: Code
         searchable: yes
